--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,11 +4,24 @@
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="/css/bootstrap.css" rel="stylesheet">
+	<link href="/css/bootstrap-theme.css" rel="stylesheet">
+	<link href="/css/hci-friends.css" rel="stylesheet">
 </head>
 
 <body>
+	<div class="container">
 	<h1>My HCI Friends</h1>
+
+	{{#each friends}}
+	<div class="friend">
+		<img src="{{imageURL}}" class="img-responsive img-rounded">
+		<h3><a href="#" class="a-friend">{{name}}</a></h3>
+		<p>{{description}}</p>
+	</div>
+	<hr>
+	{{/each}}
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -22,5 +35,10 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+	</div>
+
+	<script src="/js/jquery-1.11.0.js"></script>
+	<script src="/js/bootstrap.js"></script>
+	<script src="/js/hci-friends.js"></script>
 </body>
 </html>
